tester/testsuite/extensions/arrays1/bad/bad002.jl
/* length not of integer type */

int main() {
	int[] array = new int["x"];
	return 0;
}
